--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -1,1 +1,5 @@
 CONFIG_ZMK_PM_SOFT_OFF=y
+
+# for split display battery level
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
