--- a/config/west.yml
+++ b/config/west.yml
@@ -9,8 +9,8 @@ projects:
       remote: zmkfirmware
       revision: main
       import: app/west.yml
-    - name: zmk-helpers
-      remote: urob
-      revision: main
+    # - name: zmk-helpers
+    #   remote: urob
+    #   revision: main
   self:
     path: config
