--- a/config/west.yml
+++ b/config/west.yml
@@ -4,13 +4,13 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: urob
       url-base: https://github.com/urob
-projects:
+  projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
-    # - name: zmk-helpers
-    #   remote: urob
-    #   revision: main
+    - name: zmk-helpers
+      remote: urob
+      revision: main
   self:
     path: config
