--- a/config/includes/settings.dtsi
+++ b/config/includes/settings.dtsi
@@ -55,14 +55,15 @@
     };
 #endif
 
-#ifdef HAS_UROB
-    &num_word {
-        layers = <NUM_WORD>;
-        continue-list = <
-            BACKSPACE DELETE DOT COMMA
-            SLASH ASTERISK PLUS MINUS EQUAL DOLLAR
-            RS(SPACE)
-        >;
-        ignore-modifiers;  // modifiers don't deactivate the layer
-    };
-#endif
+// todo: what to do with num_word
+// #ifdef HAS_UROB
+//     &num_word {
+//         layers = <NUM_WORD>;
+//         continue-list = <
+//             BACKSPACE DELETE DOT COMMA
+//             SLASH ASTERISK PLUS MINUS EQUAL DOLLAR
+//             RS(SPACE)
+//         >;
+//         ignore-modifiers;  // modifiers don't deactivate the layer
+//     };
+// #endif
