add tab grave shortcut

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -9,6 +9,12 @@
             layers = <0>;
         };
 
+        grave {
+            bindings = <&kp GRAVE>;
+            key-positions = <0 1>;
+            layers = <0>;
+        }
+
         bootloader {
             bindings = <&bootloader>;
             key-positions = <0 4 20 24>;
