--- a/config/includes/behaviours_homerow_mods.dtsi
+++ b/config/includes/behaviours_homerow_mods.dtsi
@@ -51,7 +51,7 @@
         // Positional Homerow mods for shift
         // Use faster tapping term and disable some features that may
         // cause false negatives.
-        hm_shift_l: hm_shift_l {
+        hm_s_l: hm_shift_l {
             compatible = "zmk,behavior-hold-tap";
             #binding-cells = <2>;
             bindings = <&kp>, <&kp>;
@@ -65,7 +65,7 @@
             // hold-trigger-on-release;
         };
 
-        hm_shift_r: hm_shift_r {
+        hm_s_r: hm_shift_r {
             compatible = "zmk,behavior-hold-tap";
             #binding-cells = <2>;
             bindings = <&kp>, <&kp>;
@@ -79,7 +79,7 @@
             // hold-trigger-on-release;
         };
 
-        hm_layer_l: hm_layer_l {
+        hm_l_l: hm_layer_l {
             compatible = "zmk,behavior-hold-tap";
             #binding-cells = <2>;
             bindings = <&mo>, <&kp>;
@@ -93,7 +93,7 @@
             // hold-trigger-on-release;
         };
 
-        hm_layer_r: hm_layer_r {
+        hm_l_r: hm_layer_r {
             compatible = "zmk,behavior-hold-tap";
             #binding-cells = <2>;
             bindings = <&mo>, <&kp>;
@@ -126,7 +126,7 @@
             quick-tap-ms = <200>;
         };
 
-        hm_layer: homerow_mods_layer {
+        hm_l: homerow_mods_layer {
             compatible = "zmk,behavior-hold-tap";
             #binding-cells = <2>;
             bindings = <&mo>, <&kp>;
