--- a/config/includes/macros.dtsi
+++ b/config/includes/macros.dtsi
@@ -7,5 +7,13 @@ macros {
             bindings = <&kp LC(A) &kp F12>;
             label = "TMUX_MENU";
         };
+
+        tmux_navi: tmux_navi {
+            compatible = "zmk,behavior-macro";
+            #binding-cells = <0>;
+            bindings = <&kp LC(A) &kp S>;
+            label = "TMUX_NAVIGATION";
+        };
+
     };
 };
