--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -1,6 +1,6 @@
-CONFIG_ZMK_IDLE_TIMEOUT=60000
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
-CONFIG_ZMK_PM_SOFT_OFF=y
+#CONFIG_ZMK_IDLE_TIMEOUT=60000
+#CONFIG_ZMK_SLEEP=y
+#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
+#CONFIG_ZMK_PM_SOFT_OFF=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
