--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -6,14 +6,14 @@
         tab {
             timeout-ms = <100>;
             bindings = <&kp TAB>;
-            key-positions = <LT1 LT2>;
+            key-positions = <1 2>;
             layers = <0>;
         };
 
         grave {
             timeout-ms = <100>;
             bindings = <&kp GRAVE>;
-            key-positions = <LT0 LT1>;
+            key-positions = <0 1>;
             layers = <0>;
         };
 
