feat(tmux): Add split commands
Add vertical and horizontal split commands for tmux.

- Added tmux_split_v and tmux_split_h macros to macros.dtsi.
- Mapped the macros to the keymap.

--- a/config/includes/macros.dtsi
+++ b/config/includes/macros.dtsi
@@ -21,5 +21,17 @@ macros {
             bindings = <&kp LC(A) &kp Z>;
             label = "TMUX_EXPAND";
         };
+
+        tmux_split_v: tmux_split_v {
+            compatible = "zmk,behavior-macro";
+            bindings = <&kp LC(A) &kp PERCENT>;
+            label = "TMUX_SPLIT_V";
+        };
+
+        tmux_split_h: tmux_split_h {
+            compatible = "zmk,behavior-macro"
+            bindings = <&kp LC(A) &kp DOUBLE_QUOTES>;
+            label = "TMUX_SPLIT_H";
+        }
     };
 };
