fix(config): update tmux split macro
- Updated the tmux split macro in config/includes/macros.dtsi.
- Corrected a missing semicolon and cleaned up the syntax for better readability.

--- a/config/includes/macros.dtsi
+++ b/config/includes/macros.dtsi
@@ -29,9 +29,9 @@ macros {
         };
 
         tmux_split_h: tmux_split_h {
-            compatible = "zmk,behavior-macro"
+            compatible = "zmk,behavior-macro";
             bindings = <&kp LC(A) &kp DOUBLE_QUOTES>;
             label = "TMUX_SPLIT_H";
-        }
+        };
     };
 };
