--- a/config/includes/behaviours.dtsi
+++ b/config/includes/behaviours.dtsi
@@ -1,5 +1,16 @@
 
 / {
     behaviors {
+            gui_tab: gui_tab {
+            compatible = "zmk,behavior-mod-morph";
+            #binding-cells = <0>;
+            // tap alone  -> W
+            // tap while Cmd held -> Tab (with Cmd kept)
+            bindings = <&kp W>, <&kp TAB>;
+            // which modifiers trigger morph
+            mods = <(MOD_LGUI)>;
+            // IMPORTANT: keep Cmd so host sees Cmd+Tab, not just Tab
+            keep-mods = <(MOD_LGUI)>;
+        };
     };
 };
