--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -3,19 +3,19 @@
     combos {
         compatible = "zmk,combos";
 
-        tab {
-            timeout-ms = <100>;
-            bindings = <&kp TAB>;
-            key-positions = <1 2>;
-            layers = <0>;
-        };
+        // tab {
+        //     timeout-ms = <100>;
+        //     bindings = <&kp TAB>;
+        //     key-positions = <1 2>;
+        //     layers = <0>;
+        // };
 
-        grave {
-            timeout-ms = <100>;
-            bindings = <&kp GRAVE>;
-            key-positions = <0 1>;
-            layers = <0>;
-        };
+        // grave {
+        //     timeout-ms = <100>;
+        //     bindings = <&kp GRAVE>;
+        //     key-positions = <0 1>;
+        //     layers = <0>;
+        // };
 
         bootloader {
             bindings = <&bootloader>;
