feat(keymap): add GUI shift tab behavior
Adds a new GUI shift tab behavior, allowing the use of Cmd+Shift+Tab for tab navigation.

This change modifies the keymap to enable this functionality. The behavior uses a mod-morph to keep modifiers like Cmd while also sending shift tab keycodes.

--- a/config/includes/behaviours.dtsi
+++ b/config/includes/behaviours.dtsi
@@ -11,6 +11,16 @@
             keep-mods = <(MOD_LGUI)>;
         };
 
+        gui_shift_tab: gui_shift_tab {
+            compatible = "zmk,behavior-mod-morph";
+            #binding-cells = <0>;
+            bindings = <&kp S>, <&kp LS(TAB)>;
+            // which modifiers trigger morph
+            mods = <(MOD_LGUI)>;
+            // IMPORTANT: keep Cmd so host sees Cmd+Tab, not just Tab
+            keep-mods = <(MOD_LGUI)>;
+        };
+
             gui_tilde: gui_tilde {
             compatible = "zmk,behavior-mod-morph";
             #binding-cells = <0>;
