feat(softoff): Add soft off wakers to device tree
This commit adds soft off waker nodes to the device tree.

The changes include:
- Adding a soft_off_wakers node with wake-up sources
- Adding a combo for soft off waker that triggers on key presses

--- a/config/includes/softoff.dtsi
+++ b/config/includes/softoff.dtsi
@@ -16,14 +16,21 @@
             gpios = <&gpio0 2 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
         };
     };
+};
 
-        / {
+/ {
+    soft_off_wakers {
+        compatible = "zmk,soft-off-wakeup-sources";
+        wakeup-sources = <&wakeup_scan>;
+    };
+};
+
+/ {
     combos {
         soft_off_waker_combo {
             timeout-ms = <50>;
-            key-positions = <0 25>;
+            key-positions = <0 25>
             bindings = <&soft_off_waker>;
         };
     };
-};
 };
