--- a/config/includes/softoff.dtsi
+++ b/config/includes/softoff.dtsi
@@ -29,7 +29,7 @@
     combos {
         soft_off_waker_combo {
             timeout-ms = <50>;
-            key-positions = <0 25>
+            key-positions = <0 25>;
             bindings = <&soft_off_waker>;
         };
     };
