--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -33,5 +33,11 @@
             key-positions = <8 9>;
             layers = <4>;
         };
+
+        soft_off_combo {
+            timeout-ms = <50>;
+            bindings = <&hw_soft_off>;
+            key-positions = <0 9>;  // Top left + top right corner keys (Q + SEMICOLON)
+        };
     };
 };
